--- a/rss-feed-back/package.json
+++ b/rss-feed-back/package.json
@@ -4,16 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.153.0",
     "express": "^4.16.2",
+    "feed-read": "0.0.1",
     "moment": "^2.19.2",
     "object-hash": "^1.2.0",
     "rss-parser": "^2.10.8",
+    "unit": "0.0.1-alpha",
     "uuid": "^2.0.3"
-  }
+  },
+  "devDependencies": {}
 }
