--- a/rss-feed-back/package.json
+++ b/rss-feed-back/package.json
@@ -10,11 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.153.0",
+    "dynamodb-data-types": "^3.0.0",
     "express": "^4.16.2",
     "feed-read": "0.0.1",
+    "feedparser": "^2.2.7",
     "moment": "^2.19.2",
     "object-hash": "^1.2.0",
     "rss-parser": "^2.10.8",
+    "simple-node-logger": "^0.93.33",
     "unit": "0.0.1-alpha",
     "uuid": "^2.0.3"
   },
